--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ dist-*
 cabal-dev
 *.o
 *.hi
+*.hie
 *.chi
 *.chs.h
 *.dyn_o
@@ -19,3 +20,6 @@ cabal.sandbox.config
 cabal.project.local
 .HTF/
 TAGS
+cabal.project.local~
+.HTF/
+.ghc.environment.*
