--- a/test-runner.cabal
+++ b/test-runner.cabal
@@ -22,8 +22,15 @@ library
   other-modules:
       App.Context
       App.Internal
-      Data.Error
       Data.Runner
+      Effects.Algebras
+      Effects.Error
+      Effects.IdGen
+      Effects.Interpreters.IdGenUUID
+      Effects.Interpreters.MemStorage
+      Effects.Interpreters.RunnerJS
+      Effects.Runner
+      Effects.Storage
       JS.Utils
       Runner.Test
       Paths_test_runner
@@ -62,24 +69,27 @@ library
       TypeFamilies
       TypeFamilyDependencies
       TypeOperators
-  ghc-options: -O3 -Wall -Werror -fno-warn-partial-type-signatures -fno-warn-orphans -fconstraint-solver-iterations=0 -flate-specialise -fspecialise-aggressively -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-unused-top-binds
+  ghc-options: -O3 -Wall -Werror -fno-warn-partial-type-signatures -fno-warn-orphans -fconstraint-solver-iterations=0 -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-unused-top-binds
   build-depends:
       aeson
     , async
     , base
     , bytestring
     , co-log
+    , co-log-polysemy
     , containers
     , deriving-aeson
-    , extra
     , http-client
     , http-types
     , inline-js
     , inline-js-core
     , lens
+    , lucid
     , mtl
     , network
     , optparse-applicative
+    , polysemy
+    , polysemy-plugin
     , relude
     , servant-server
     , time
@@ -129,24 +139,27 @@ executable test-runner
       TypeFamilies
       TypeFamilyDependencies
       TypeOperators
-  ghc-options: -O3 -Wall -Werror -fno-warn-partial-type-signatures -fno-warn-orphans -fconstraint-solver-iterations=0 -flate-specialise -fspecialise-aggressively -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-unused-top-binds -threaded -O3 -rtsopts -with-rtsopts=-N
+  ghc-options: -O3 -Wall -Werror -fno-warn-partial-type-signatures -fno-warn-orphans -fconstraint-solver-iterations=0 -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-unused-top-binds -threaded -O3 -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
     , async
     , base
     , bytestring
     , co-log
+    , co-log-polysemy
     , containers
     , deriving-aeson
-    , extra
     , http-client
     , http-types
     , inline-js
     , inline-js-core
     , lens
+    , lucid
     , mtl
     , network
     , optparse-applicative
+    , polysemy
+    , polysemy-plugin
     , relude
     , servant-server
     , test-runner
@@ -164,8 +177,15 @@ test-suite test-runner-tests
   other-modules:
       App.Context
       App.Internal
-      Data.Error
       Data.Runner
+      Effects.Algebras
+      Effects.Error
+      Effects.IdGen
+      Effects.Interpreters.IdGenUUID
+      Effects.Interpreters.MemStorage
+      Effects.Interpreters.RunnerJS
+      Effects.Runner
+      Effects.Storage
       JS.Utils
       Runner
       Runner.Test
@@ -206,7 +226,7 @@ test-suite test-runner-tests
       TypeFamilies
       TypeFamilyDependencies
       TypeOperators
-  ghc-options: -O3 -Wall -Werror -fno-warn-partial-type-signatures -fno-warn-orphans -fconstraint-solver-iterations=0 -flate-specialise -fspecialise-aggressively -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-unused-top-binds -threaded -O2 -rtsopts -with-rtsopts=-N -Wno-unused-local-binds -Wno-unused-matches
+  ghc-options: -O3 -Wall -Werror -fno-warn-partial-type-signatures -fno-warn-orphans -fconstraint-solver-iterations=0 -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-unused-top-binds -threaded -O2 -rtsopts -with-rtsopts=-N -Wno-unused-local-binds -Wno-unused-matches
   build-depends:
       QuickCheck
     , aeson
@@ -214,18 +234,21 @@ test-suite test-runner-tests
     , base
     , bytestring
     , co-log
+    , co-log-polysemy
     , containers
     , deriving-aeson
-    , extra
     , hspec ==2.*
     , http-client
     , http-types
     , inline-js
     , inline-js-core
     , lens
+    , lucid
     , mtl
     , network
     , optparse-applicative
+    , polysemy
+    , polysemy-plugin
     , relude
     , servant-server
     , time
