--- a/.github/workflows/test-runner-build.yaml
+++ b/.github/workflows/test-runner-build.yaml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-haskell@v1
       with:
-        ghc-version: '8.10.4'
+        ghc-version: 'latest'
         cabal-version: '3.2'
         enable-stack: true
         stack-version: 'latest'
