--- a/stack.yaml
+++ b/stack.yaml
@@ -44,11 +44,14 @@ extra-deps:
 
 - co-log-polysemy-0.0.1.3
 
+- wai-make-assets-0.3
+
 - github: tweag/inline-js
   commit: d69124edeb9ac7aed91c521700d11019473077c9
   subdirs:
     - inline-js
     - inline-js-core
+
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
